# smpq-mirror

./: CHANGELOG  CMakeLists.txt  README  append.c  check.c  common.h  dirname.c  extract.c  info.c  kio_smpq.cpp  kio_smpq.h  listfiles.c  main.c  mangen.c  print.c  remove.c  rename.c  smpq.nsi  smpq.protocol  smpq.xml
